# tiny_django_projects

./: .gitignore  README.md
beat/: README.md  high_volume_test.py  pyproject.toml  verify_ingestion.py
beat/src/config/: __init__.py  celery.py  settings.py
beat/src/echo/: admin.py  models.py  tasks.py
beat/src/echo/migrations/: 0001_initial.py
blog_site/: README.md
blog_site/blog/: models.py  views.py
blog_site/blog/migrations/: 0001_initial.py
blog_site/blog_site/: settings.py
bookmarks/account/: authentication.py  forms.py  urls.py  views.py
bookmarks/bookmarks/: settings.py  urls.py
django_compose/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
django_compose/src/config/: settings.py  urls.py
django_compose/src/emailer/: forms.py  tasks.py  urls.py  views.py
django_compose/src/emailer/templates/emailer/: feedback.html  success.html
django_compose/src/todo/: urls.py  views.py
django_compose/src/todo/migrations/: 0001_initial.py
django_compose/src/todo/templates/todo/: todo_create.html  todo_list.html
fedora/: README.md  pyproject.toml
fedora/src/artifacts/: urls.py  views.py
fedora/src/config/: settings.py  urls.py
fedora/src/people/: models.py  serializers.py  urls.py  views.py
fedora/src/people/fixtures/: people.json
fedora/src/people/migrations/: 0001_initial.py
react_django/: README.md
react_django/backend/: pyproject.toml
react_django/backend/src/blog/: admin.py  models.py  schema.py
react_django/backend/src/blog/migrations/: 0001_initial.py
react_django/backend/src/config/: settings.py  urls.py
smartnotes/home/: urls.py  views.py
smartnotes/notes/: admin.py  forms.py  urls.py  views.py
smartnotes/smartnotes/: settings.py  urls.py
(+30 files in other folders)
